# ROS_Pepper

./: .gitignore  README.md  TODO: mesh  build.sh  frames.gv  make_bridge.sh  setup.sh
.devcontainer/config/: .aliases.sh  .p10k.zsh  .rosinstall  bridge.repos  ros1.repos  ros2.repos
.devcontainer/cuda/: Dockerfile.cuda  devcontainer.json
.devcontainer/mesa/: Dockerfile.mesa  devcontainer.json
ws/: nav2_params.yaml  slam_params.yaml
ws/catkin_ws/src/naoqi_exploration/: CMakeLists.txt  package.xml
ws/catkin_ws/src/naoqi_exploration/src/: exploring.py
ws/colcon_ws/src/: frames.gv  pepper.rviz
ws/colcon_ws/src/custom_interfaces/: package.xml
ws/colcon_ws/src/laser_1to2_repub/: package.xml  setup.cfg  setup.py
ws/colcon_ws/src/laser_1to2_repub/laser_1to2_repub/: republisher.py
ws/colcon_ws/src/laser_1to2_repub/launch/: repub.launch.py
ws/colcon_ws/src/laser_filter/: package.xml  setup.py
ws/colcon_ws/src/laser_filter/laser_filter/: laser_filter.py
ws/colcon_ws/src/pepper_gazebo/: package.xml  setup.cfg  setup.py
ws/colcon_ws/src/pepper_gazebo/launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_entity.launch.py
ws/colcon_ws/src/pepper_nav/: setup.py
ws/colcon_ws/src/pepper_pose_manager/: package.xml  setup.cfg  setup.py
ws/colcon_ws/src/ros_qi_bridge/: package.xml  setup.cfg  setup.py
ws/colcon_ws/src/urg_slam/: package.xml  setup.cfg  setup.py
ws/colcon_ws/src/urg_slam/config/: lidar.yaml  slam.yaml
ws/colcon_ws/src/urg_slam/launch/: urg_slam.launch.py
ws/colcon_ws/src/urg_slam/urg_slam/: urg_slam.py
(+16 files in other folders)
